--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     <header>
