--- a/services.html
+++ b/services.html
@@ -11,22 +11,23 @@
 <body>
     <header>
         <img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo">
-        <nav>
+        <nav id="open" class="open">
             <a href="index.html">Home</a>
             <a class="selected" href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <button onclick="window.location.href='contact.html'" class="cta-button">Contact Us</button>
+        <button onclick="window.location.href='contact.html'" class="cta-button mobile-hide">Contact Us</button>
+        <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
     <h1 class="centered-text">Our Services</h1>
-    <p class="centered-text">Comprehensive web development solutions tailored to your <br>
+    <p class="centered-text">Comprehensive web development solutions tailored to your
         unique business needs.
     </p>
 
     <section class="section-container">
-        <div class="row">
+        <div class="row mobile-container">
             <div class="card">
                 <div class="card-header">
                     <h2>Web Design</h2>
@@ -49,7 +50,7 @@
                 <p>Launch and manage online stores with secure payment gateways and seamless user experiences.</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row mobile-container">
             <div class="card">
                 <div class="card-header">
                     <h2>Database Creation</h2>
