--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,22 @@
 <body>
     <header>
         <img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo">
-        <nav>
+        <nav id="open" class="open">
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="selected" href="contact.html">Contact</a>
         </nav>
-        <button disabled class="cta-button">Contact Us</button>
+        <button disabled class="cta-button mobile-hide">Contact Us</button>
+        <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
     <h1 class="centered-text">Get In Touch</h1>
     <p class="centered-text">Ready to start your next project? <br>Let's discuss 
         how to help your business grow.
     </p>
 
-    <div class="container">
+    <div class="container mobile-container">
         <div class="column">
             <div>
             <h2 class="contact-header">Contact Information</h2>
