--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,15 @@
 <body>
     <header>
         <img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo">
-        <nav>
+        <nav id="open" class="open">
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
             <a href="about.html">About</a>
             <a class="selected" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <button onclick="window.location.href='contact.html'" class="cta-button">Contact Us</button>
+        <button onclick="window.location.href='contact.html'" class="cta-button mobile-hide">Contact Us</button>
+        <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
     <h1 class="centered-text">Our Projects</h1>
     <p class="centered-text">A look at recent work and how businesses have <br>transformed 
@@ -26,7 +27,7 @@
     </p>
 
     <section class="section-container">
-        <div class="row">
+        <div class="row mobile-container">
             <div class="card">
                 <div class="image-container">
                     <img class="project-image" src="images/screenshots/Screenshot 2026-01-20 152411.jpg" alt="CEEC Homeschool Image">
@@ -61,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mobile-container">
             <div class="card">
                 <div class="image-container">
                     <img class="project-image" src="images/screenshots/kyburnym-website.png" alt="Kyburnym Systems Image">
