Mobile and Desktop Responisve Changes

--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
             <a href="contact.html">Contact</a>
         </nav>
         <button onclick="window.location.href='contact.html'" class="cta-button mobile-hide">Contact Us</button>
-        <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
+        <button id="hamburger" class="desktop-hide hamburger-btn desktop-hide"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
     <h1 class="centered-text">Our Services</h1>
     <p class="centered-text">Comprehensive web development solutions tailored to your
