--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
         </div>
         <div class="column">
             <h1>Professional Web<br>Development Solutions</h1>
+            <h4>Custom websites and web apps, built right the first time.</h4>
             <p>Creating stunning, high-performance web applications that help your business 
               grow. Specializing in modern, responsive websites, custom web applications, 
-              and e-commerce platforms built with cutting-edge technologies. From concept 
-              to deployment, expert support every step of the way to ensure your project 
-              exceeds expectations.
+              and e-commerce platforms built with cutting-edge technologies.
+            </p>
+            <h4>Work directly with the developer who designs, builds, and supports your project — no handoffs, no bloat.</h4>
+            <p>From concept to deployment, expert support every step of the way to ensure your project exceeds expectations.
             </p>
             <div class="mobile-btns">
                 <button onclick="window.location.href='services.html'" class="cta-button mobile-btn">Learn More</button>
@@ -43,13 +45,69 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container"> 
-            <div class="column">
-                <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
+    <hr class="section-divider">
+
+    <div class="container mobile-container">
+        <div class="column">
+            <img src="images/photos/web-design.jpg" alt="About Us Picture by Unsplash" class="homepage-pic">
+        </div>
+        <div class="column">
+            <h1>What We Do</h1>
+            <h4>TitaniumBlue combines product-level engineering with the reliability of a professional web studio.</h4>
+            <p>Every project is built for speed, maintainability, and long-term growth. From the first 
+                conversation to final delivery, the focus is on building solutions that are easy to manage today 
+                and ready to scale tomorrow. That means:
+            </p>
+            <ul class="about-list">
+                <li>Performance-focused builds</li>
+                <li>Clean, future-proof code</li>
+                <li>Clear communication from start to finish</li>
+            </ul>
+            <div class="mobile-btns">
+                <button onclick="window.location.href='about.html'" class="cta-button mobile-btn">About Us</button>
+                <button onclick="window.location.href='portfolio.html'" class="cta-button portfolio mobile-btn">Previous Works</button>
             </div>
-            <div class="column">
-                <p>Photo by<a href="https://unsplash.com/@cgower?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christopher Gower</a>on<a href="https://unsplash.com/photos/a-macbook-with-lines-of-code-on-its-screen-on-a-busy-desk-m_HRfLhgABo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+        </div>
+    </div>
+
+    <hr class="section-divider">
+
+    <div class="container mobile-container">
+        <div class="column desktop-hide">
+            <img src="images/photos/solutions.jpg" alt="Photo by Christopher Gower on Unsplash" class="homepage-pic">
+        </div>
+        <div class="column">
+            <h1>Solutions That Scale</h1>
+            <h4>Built for how your business actually operates.</h4>
+            <p>Not templates or one-size-fits-all solutions, but websites designed around your workflows, 
+                goals, and day-to-day realities—so they’re easy to manage, scale, and rely on as your business 
+                grows.
+            </p>
+            <h4>TitaniumBlue will tailor solutions to where your business is today—and where it’s going next:</h4>
+            <ul class="about-list section-spacing">
+                <li><b>Small Businesses</b> – Professional websites that convert visitors into customers</li>
+                <li><b>Growing Companies</b> – Scalable systems that won’t need rebuilding in a year</li>
+                <li><b>Startups</b> – MVPs and production-ready apps built with real-world constraints in mind</li>
+            </ul>
+            <div class="mobile-btns">
+                <button onclick="window.location.href='services.html'" class="cta-button mobile-btn">Solutions</button>
+                <button onclick="window.location.href='portfolio.html'" class="cta-button portfolio mobile-btn">Previous Works</button>
+            </div>
+        </div>
+        <div class="column mobile-hide">
+            <img src="images/photos/solutions.jpg" alt="Photo by Christopher Gower on Unsplash" class="homepage-pic">
+        </div>
+    </div>
+
+    <footer class="container"> 
+        <div class="column">
+            <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
+        </div>
+        <div class="column">
+            <div>
+                <p>Photo by <a href="https://unsplash.com/@cgower?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christopher Gower</a> on <a href="https://unsplash.com/photos/a-macbook-with-lines-of-code-on-its-screen-on-a-busy-desk-m_HRfLhgABo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+                <p>Photo by <a href="https://unsplash.com/@edhogilangpratama?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Edho Pratama</a> on <a href="https://unsplash.com/photos/close-up-photo-black-android-smartphone-T6fDN60bMWY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+                <p>Photo by <a href="https://unsplash.com/@edge2edgemedia?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Edge2Edge Media</a> on <a href="https://unsplash.com/photos/black-puzzle-piece-on-white-paper-x21KgBfOd_4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
             </div>
         </div> 
     </footer>
