--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         how to help your business grow.
     </p>
 
-    <div class="container mobile-container">
+    <div class="container mobile-container container-spacing">
         <div class="column">
             <div>
             <h2 class="contact-header">Contact Information</h2>
