--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <button onclick="window.location.href='contact.html'" class="cta-button mobile-hide">Contact Us</button>
         <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
-    <div class="container mobile-container">
+    <div class="container mobile-container section-spacing">
         <div class="column">
             <img src="images/photos/aboutus.jpg" alt="About Us Picture by Unsplash" class="homepage-pic">
         </div>
@@ -45,14 +45,12 @@
         </div>
     </div>
     
-    <footer>
-        <div class="container"> 
-            <div class="column">
-                <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
-            </div>
-            <div class="column">
-                <p>Photo by<a href="https://unsplash.com/@goian?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ian Schneider</a>on<a href="https://unsplash.com/photos/two-person-standing-on-gray-tile-paving-TamMbr4okv4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
-            </div>
+    <footer class="container"> 
+        <div class="column">
+            <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
+        </div>
+        <div class="column">
+            <p>Photo by<a href="https://unsplash.com/@goian?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ian Schneider</a>on<a href="https://unsplash.com/photos/two-person-standing-on-gray-tile-paving-TamMbr4okv4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
         </div> 
     </footer>
 
