--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,18 @@
         <button disabled class="cta-button mobile-hide">Contact Us</button>
         <button id="hamburger" class="desktop-hide hamburger-btn"><img src="images/icons/Menu Icons/hamburger-menu-48.png" alt="hamburger menu by icons8" class="menu-icon"></button>
     </header>
-    <h1 class="centered-text">Get In Touch</h1>
-    <p class="centered-text">Ready to start your next project? <br>Let's discuss 
-        how to help your business grow.
-    </p>
+    <h1 class="centered-text">Ready to Get Started?</h1>
+    <p class="centered-text">Let's discuss how to help your business grow.</p>
 
     <div class="container mobile-container container-spacing">
         <div class="column">
             <div>
-            <h2 class="contact-header">Contact Information</h2>
+                <h3 class="contact-header">Contact Information</h3>
                 <div class="contact-item">
                     <img src="images/icons/Contact Icons/email_2.png" alt="Email Icon" class="contact-icon">
                     <div class="contact-text">
                         <h4>Email</h4>
-                        <p>titaniumblue@titaniumblue.tech</p>
+                        <p>titaniumblue<br class="desktop-hide">@titaniumblue.tech</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -54,6 +52,8 @@
             </div>
         </div>
         <div class="column">
+            <h3 class="contact-header">Build With Us</h3>
+            <p>Tell us a bit about your goals and we’ll get back to you as soon as possible.</p>
             <form class="contact-form" id="contactForm">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -66,18 +66,16 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container"> 
-            <div class="column">
-                <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
-            </div>
-            <div class="column">
-                <div>   
-                    <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/X0mEIh0RyDdL/email">Email</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
-                    <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/18txcSQ3wJcU/iphone-14">iPhone 14</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
-                    <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/HZC1E42sHiI3/navigation">Navigation</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
-                </div>          
-            </div>
+    <footer class="container"> 
+        <div class="column">
+            <p>&copy; 2026 titaniumBlue. All rights reserved.</p>
+        </div>
+        <div class="column">
+            <div>   
+                <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/X0mEIh0RyDdL/email">Email</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
+                <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/18txcSQ3wJcU/iphone-14">iPhone 14</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
+                <p><a rel="noopener" target="_blank" href="https://icons8.com/icon/HZC1E42sHiI3/navigation">Navigation</a> icon by <a rel="noopener" target="_blank" href="https://icons8.com">Icons8</a></p>
+            </div>          
         </div> 
     </footer>
 
