--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
 
     <footer>
         <p class="centered-text">&copy; 2026 titaniumBlue. All rights reserved.</p>
-    </foote>
+    </footer>
 
     <!-- Link to external JavaScript -->
     <script src="script.js"></script>
