--- a/contact.html
+++ b/contact.html
@@ -53,14 +53,14 @@
         </div>
         <div class="column">
             <h3 class="contact-header">Build With Us</h3>
-            <p>Tell us a bit about your goals and we’ll get back to you as soon as possible.</p>
+            <p>Tell us a bit about your project goals and we’ll get back to you as soon as possible.</p>
             <form class="contact-form" id="contactForm">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your Name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Your Email" required>
                 <label for="message">Message</label>
-                <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+                <textarea id="message" name="message" placeholder="Project Goals" rows="5" required></textarea>
                 <button type="submit" class="cta-button">Send Message</button>
             </form>
         </div>
