--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo">
+        <a href="index.html"><img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo"></a>
         <nav id="open" class="open">
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
