--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo">
+        <a href="index.html"><img src="images/logos/ModernTitaniumBlueLogo.png" alt="titaniumBlue Logo" class="logo"></a>
         <nav id="open" class="open">
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
@@ -41,7 +41,7 @@
             </div>
             <div class="card">
                 <div class="image-container">
-                    <img class="project-image" src="images/screenshots/GarrettLandscaping.png" alt="Garrett Landscaping Image">
+                    <a href="https://scepticae.github.io/garrettLandscapingII"><img class="project-image" src="images/screenshots/GarrettLandscaping.png" alt="Garrett Landscaping Image"></a>
                 </div>
                 <div class="project-header">
                     <h3>Garrett Landscaping Website</h3>
